<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/activity_vertical_margin">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/insTipoReporte"/>

        <Spinner
            android:id="@+id/spnrTipoReporte"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/insZonaReporte"/>

        <Spinner
            android:id="@+id/spnrZonaReporte"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/insComentarioReporte"/>

        <EditText
            android:id="@+id/edtDescripcionReporte"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="4"
            android:minLines="4"

            android:gravity="top|left"
            android:hint="En el supermercado x...."
            android:maxLines="1" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enviar"/>

    </LinearLayout>

</ScrollView>